fixed text alignment problem on netscape

--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,7 @@ a, button {
   font-size: 42px;
   padding-left: 35px;
   font-weight: bold;
+  text-align: left;
 }
 @media (max-aspect-ratio: 1/1) {
   #main #info ul#buttonlist li button div.lower {
