--- a/scss/ButtonList.scss
+++ b/scss/ButtonList.scss
@@ -63,6 +63,7 @@ ul#buttonlist {
         font-size: 42px;
         padding-left: 35px;
         font-weight: bold;
+        text-align: left;
         @media (max-aspect-ratio: 1/1) {
           font-size: 22px;
         }
